# finans

./: CMakeLists.txt  README.md
cmake-modules/: FindGMock.cmake  FindGTest.cmake
finans/: CMakeLists.txt
finans/cmd/: CMakeLists.txt  main.cc
finans/core/: CMakeLists.txt  commandline.cc  commandline.h  configuration.cc  configuration.h  datetime.cc  datetime.h  file.cc  file.h  finans-proto.h  finans.cc  finans.h  finans.proto  os.cc  os.h  proto.cc  proto.h  stringutils.cc  stringutils.h
finans/core_test/: CMakeLists.txt  stringconverter_test.cc  testcmdline.cc  testdate.cc
gfx/logo/: readme.md
